[package]
name = "cube_code"
version = "0.1.2"
edition = "2024"
authors = ["sts10 <sschlinkert@gmail.com>"]
repository = "https://github.com/sts10/cube-code-maker"
readme = "readme.markdown"

[dependencies]
serde_json = "1.0.149"
clap = { version = "4.5.58", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
